@@ -6,10 +6,13 @@
  */
 package com.powsybl.dynawo.it;
 
+import com.google.common.io.ByteStreams;
 import com.powsybl.commons.datasource.ResourceDataSource;
 import com.powsybl.commons.datasource.ResourceSet;
 import com.powsybl.commons.reporter.Reporter;
+import com.powsybl.commons.reporter.ReporterModel;
 import com.powsybl.commons.test.ComparisonUtils;
+import com.powsybl.commons.test.TestUtil;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.dynaflow.DynaFlowConfig;
 import com.powsybl.dynaflow.DynaFlowParameters;
@@ -32,17 +35,17 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 class DynaFlowTest extends AbstractDynawoTest {
 
@@ -51,8 +54,6 @@ class DynaFlowTest extends AbstractDynawoTest {
     private DynaFlowSecurityAnalysisProvider securityAnalysisProvider;
 
     private LoadFlowParameters loadFlowParameters;
-
-    private DynaFlowParameters dynaFlowLoadFlowParameters;
 
     private SecurityAnalysisParameters securityAnalysisParameters;
 
@@ -63,22 +64,37 @@ class DynaFlowTest extends AbstractDynawoTest {
         DynaFlowConfig config = new DynaFlowConfig(Path.of("/dynaflow-launcher"), false);
         loadFlowProvider = new DynaFlowProvider(() -> config);
         loadFlowParameters = new LoadFlowParameters();
-        dynaFlowLoadFlowParameters = new DynaFlowParameters();
         securityAnalysisProvider = new DynaFlowSecurityAnalysisProvider(() -> config);
         securityAnalysisParameters = new SecurityAnalysisParameters();
-        loadFlowParameters.addExtension(DynaFlowParameters.class, dynaFlowLoadFlowParameters);
+        loadFlowParameters.addExtension(DynaFlowParameters.class, new DynaFlowParameters());
     }
 
     @Test
-    void testLf() {
+    void testLf() throws IOException {
         Network network = IeeeCdfNetworkFactory.create14Solved();
-        LoadFlowResult result = loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters)
+        network.getLine("L6-13-1").newCurrentLimits1()
+                .beginTemporaryLimit().setName("1").setAcceptableDuration(60).setValue(100).endTemporaryLimit()
+                .beginTemporaryLimit().setName("2").setAcceptableDuration(120).setValue(110).endTemporaryLimit()
+                .setPermanentLimit(200)
+                .add();
+
+        ReporterModel reporter = new ReporterModel("root", "testLf root reporter");
+        LoadFlowResult result = loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters, reporter)
                 .join();
+
         assertTrue(result.isOk());
         assertEquals(1, result.getComponentResults().size());
         LoadFlowResult.ComponentResult componentResult = result.getComponentResults().get(0);
         assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, componentResult.getStatus());
         assertEquals("B4", componentResult.getSlackBusId());
+
+        StringWriter sw = new StringWriter();
+        reporter.export(sw);
+        System.out.println(sw);
+        InputStream refStream = Objects.requireNonNull(getClass().getResourceAsStream("/loadflow_timeline_report.txt"));
+        String refLogExport = TestUtil.normalizeLineSeparator(new String(ByteStreams.toByteArray(refStream), StandardCharsets.UTF_8));
+        String logExport = TestUtil.normalizeLineSeparator(sw.toString());
+        assertEquals(refLogExport, logExport);
     }
 
     @Test
@@ -95,16 +111,33 @@ class DynaFlowTest extends AbstractDynawoTest {
         network.getVoltageLevelStream().forEach(vl -> vl.setLowVoltageLimit(vl.getNominalV() * 0.97));
 
         // Launching a load flow before the security analysis is required
-        loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters).join();
+        ReporterModel reporterLf = new ReporterModel("root", "Root message");
+        loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters, reporterLf).join();
+
+        StringWriter swReporterLf = new StringWriter();
+        reporterLf.export(swReporterLf);
+        InputStream refStreamLf = Objects.requireNonNull(getClass().getResourceAsStream("/ieee14/security-analysis/timeline_report_lf.txt"));
+        String refLogExportLf = TestUtil.normalizeLineSeparator(new String(ByteStreams.toByteArray(refStreamLf), StandardCharsets.UTF_8));
+        String logExportLf = TestUtil.normalizeLineSeparator(swReporterLf.toString());
+        assertEquals(refLogExportLf, logExportLf);
 
         List<Contingency> contingencies = network.getLineStream()
                 .map(l -> Contingency.line(l.getId()))
-                .collect(Collectors.toList());
+                .toList();
+
+        ReporterModel reporter = new ReporterModel("root", "Root message");
         SecurityAnalysisResult result = securityAnalysisProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, new DefaultLimitViolationDetector(),
                         new LimitViolationFilter(), computationManager, securityAnalysisParameters, n -> contingencies, Collections.emptyList(),
-                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Reporter.NO_OP)
+                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), reporter)
                 .join()
                 .getResult();
+
+        StringWriter swReporterAs = new StringWriter();
+        reporter.export(swReporterAs);
+        InputStream refStreamReporterAs = Objects.requireNonNull(getClass().getResourceAsStream("/ieee14/security-analysis/timeline_report_as.txt"));
+        String refLogExportAs = TestUtil.normalizeLineSeparator(new String(ByteStreams.toByteArray(refStreamReporterAs), StandardCharsets.UTF_8));
+        String logExportAs = TestUtil.normalizeLineSeparator(swReporterAs.toString());
+        assertEquals(refLogExportAs, logExportAs);
 
         StringWriter serializedResult = new StringWriter();
         SecurityAnalysisResultSerializer.write(result, serializedResult);
@@ -118,7 +151,7 @@ class DynaFlowTest extends AbstractDynawoTest {
 
         List<Contingency> contingencies = network.getGeneratorStream()
                 .map(g -> Contingency.generator(g.getId()))
-                .collect(Collectors.toList());
+                .toList();
         SecurityAnalysisResult result = securityAnalysisProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, new DefaultLimitViolationDetector(),
                         new LimitViolationFilter(), computationManager, securityAnalysisParameters, n -> contingencies, Collections.emptyList(),
                         Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Reporter.NO_OP)
